30-applications/Applications/nextcloud/extras/middleware-hsts.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-hsts
spec:
  headers:
    stsSeconds: 15552000
    stsIncludeSubdomains: false
