30-applications/Applications/nextcloud/extras/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-postgres
spec:
  selector:
    app: nextcloud-postgres
  ports:
    - port: 5432
      targetPort: 5432
