30-applications/Applications/nextcloud/extras/service-push.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-push
spec:
  selector:
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/component: app
  ports:
    - port: 7867
      targetPort: 7867
